--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@
 #
 #    pip-compile --upgrade --output-file requirements.txt setup.py
 #
+confidence==0.1.1
+pyyaml==3.12              # via confidence
 tabulate==0.8.2
