--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@
 #
 #    pip-compile --upgrade --output-file requirements.txt setup.py
 #
-
-confidence==0.6.1
-pyyaml==5.1.2             # via confidence
-tabulate==0.8.5
+confidence==0.9
+    # via hours (setup.py)
+pyyaml==5.4.1
+    # via confidence
+tabulate==0.8.9
+    # via hours (setup.py)
